<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ReVolt Control</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_notifications">Notifications</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="halo_header">HALO</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="softkey_options">Soft Key Options</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="title_ribbon">Ribbons</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="title_about">About ReVolt</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_halo">Customize Halo</string>
    <string name="title_pie">Pie Controls</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_statusbar_signal">Statusbar Signal</string>
    <string name="title_notification_shortcuts">Notification Shortcuts</string>
    <string name="title_power_widget">Power Widget</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_softkey">Soft Key Options</string>
    <string name="title_led">LED Control</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="mgerrit_activity_name">mGerrit</string>
    <string name="ribbon_settings_title">Ribbons</string>
    <string name="title_activedisplay">Active Display</string>
    <string name="title_gesture_anywhere">GestureAnywhere</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_halo">@null</string>
    <string name="header_summary_pie">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_notification_shortcuts">@null</string>
    <string name="header_summary_power_widget">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_softkey">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="ribbon_settings_summary">@null</string>
    <string name="header_summary_active_display">@null</string>
    <string name="header_summary_gesture_anywhere">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_apps">Reset apps</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_hide">Hide apps</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_na">Not available</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available for the left and right swipe ribbons.</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="enable_bootanimation_unlock">To Unlock: uncheck \"disable boot animation\"</string>
    <string name="enable_phone_or_phablet">To Unlock: enable phone or phablet \"UI mode\"</string>
    <string name="enable_tablet_ui">To Unlock: enable tablet \"UI mode\"</string>
    <string name="enable_noti_wallpaper">To Unlock: enable phone or phablet \"UI mode\" and set a
        \"notification background\"
    </string>
    <string name="enable_menu_location">To Unlock: enable a \"menu Location\"</string>
    <string name="enable_hiding_navbar">To Unlock: \"enable hidden NavBar\"</string>
    <string name="enable_hiding_systembar">To Unlock: \"enable hidden SystemBar\"</string>
    <string name="enable_audio_mode">To Unlock: enable \"face down audio mode\"</string>
    <string name="enable_battery_bar">To Unlock: enable a \"battery bar location\"</string>
    <string name="enable_clock_location">To Unlock: enable a \"clock style\"</string>
    <string name="enable_signal_text">To Unlock: set \"signal indicator style\" to display text or dBm</string>
    <string name="enable_wifi_text">To Unlock: set \"WiFi signal indicator style\" to display text</string>
    <string name="enable_toggle_tiles">To Unlock: set \"toggle style\" to tiles</string>
    <string name="enable_fasttoggle">To Unlock: \"enable fast toggle\" and tiles \"toggle style\"</string>
    <string name="enable_favorite_toggle">To Unlock: enable a \"favorite contact\" toggle here or in a Ribbon</string>
    <string name="enable_screenshot_toggle">To Unlock: enable a \"screenshot\" toggle here or in a Ribbon</string>
    <string name="enable_custom_toggle">To Unlock: enable a \"custom\" toggle here or in a Ribbon</string>
    <string name="enable_spen_gestures">To Unlock: \"enable S Pen gestures\" </string>
    <string name="enable_persist_installer">To Unlock: \"enable persistence\"</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="title_show_power_saver">Power Saver</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="about_rv_settings_title">About Revolt</string>
    <string name="about_revolt">About ReVolt</string>
    <string name="about_revolt_summary">@null</string>
    <string name="devs">Developers</string>
    <string name="maintainers">Maintainers</string>
    <string name="contributors_title">Contributers</string>
    <string name="support_team">Support Team</string>
    <string name="donate_johnhany97">http://forum.xda-developers.com/donatetome.php?u=4655909</string>
    <string name="donate_cyanogenmod">http://forum.cyanogenmod.com/donate</string>
    <string name="github_cyanogenmod">http://github.com/CyanogenMod/</string>
    <string name="donate_aokp">http://aokp.co/</string>
    <string name="github_aokp">http://github.com/AOKP/</string>
    <string name="revolt">ReVolt</string>
    <string name="github_revolt">http://github.com/ReVolt-ROM</string>
    <string name="github_johnhany97">http://github.com/Johnhany97</string>
    <string name="github_hazed">http://github.com/Hazedabeast</string>
    <string name="github_reddevil">https://github.com/red-devil</string>
    <string name="github_tpoint75">http://github.com/TPoint75</string>
    <string name="revolt_site_title">ReVolt WebSite</string>
    <string name="revolt_site_summary">Find Latest News and Updates from the Official ReVolt Website.</string>
    <string name="title_buttons">Buttons</string>
    <string name="title_toggle_wifi">Wi-Fi</string>
    <string name="title_toggle_bluetooth">Bluetooth</string>
    <string name="title_toggle_gps">GPS</string>
    <string name="title_toggle_sound">Sound</string>
    <string name="title_toggle_brightness">Brightness</string>
    <string name="title_toggle_sync">Sync</string>
    <string name="title_toggle_wifiap">Wi-Fi AP</string>
    <string name="title_toggle_screentimeout">Screen Timeout</string>
    <string name="title_toggle_mobiledata">Mobile Data</string>
    <string name="title_toggle_lockscreen">Lockscreen</string>
    <string name="title_toggle_networkmode">Network Mode</string>
    <string name="title_toggle_autorotate">Orientation</string>
    <string name="title_toggle_airplane">Airplane Mode</string>
    <string name="title_toggle_flashlight">LED Flashlight</string>
    <string name="title_toggle_sleep">Go To Sleep</string>
    <string name="title_toggle_media_play_pause">Play/Pause Music</string>
    <string name="title_toggle_media_previous">Previous Music Track</string>
    <string name="title_toggle_media_next">Next Music Track</string>
    <string name="title_toggle_lte">LTE</string>
    <string name="title_toggle_wimax">WiMAX</string>
    <string name="title_button_modes">Button Modes</string>
    <string name="pref_brightness_mode_title">Brightness Modes</string>
    <string name="pref_brightness_mode_summary">View or change the brightness modes</string>
    <string name="pref_network_mode_title">Network Modes</string>
    <string name="pref_screentimeout_mode_title">Screen Timeout Modes</string>
    <string name="pref_ring_mode_title">Sound Modes</string>
    <string name="pref_ring_mode_summary">View or change the sound button modes</string>
    <string name="pref_flash_mode_title">Flash Mode</string>
    <string name="signal_style">Signal indicator style</string>
    <string name="signal_color_title">Signal text color</string>
    <string name="hide_signal_title">Hide signal bars</string>
    <string name="hide_signal_summary">Checking this hides the signal bar indicator (updates when signal strength
        changes)
    </string>
    <string name="wifi_signal_style">WiFi signal indicator style</string>
    <string name="wifi_signal_color_title">WiFi signal text color</string>
    <string name="alt_signal_title">Alt signal indicator layout</string>
    <string name="alt_signal_summary">Use alternate Gingerbread style signal cluster</string>
    <string name="interface_navring_settings_title">Navigation Ring</string>
    <string name="interface_navring_settings_summary">@null</string>
    <string name="vibrations">Vibrations</string>
    <string name="screen_state_toggles_title">Suspend Actions</string>
    <string name="pie_controls_title">Pie controls</string>
    <string name="show_network_speed">Network speed indicator</string>
    <string name="show_network_speed_summary">Show network speed in statsbar</string>
    <string name="title_animation_controls">Animation Controls</string>
    <string name="sms_breath">Breathing SMS</string>
    <string name="sms_breath_summary">Will give your sms notifications a breathing effect in the statusbar.</string>
    <string name="missed_call_breath">Breathing Missed Call</string>
    <string name="missed_call_breath_summary">Will give your missed call notifications a breathing effect on the statusbar.</string>
    <string name="ad_settings_title">Active display</string>
</resources>