<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:id="@+id/about"
        android:fragment="com.revolt.control.fragments.About"
        android:title="@string/about_revolt"
        android:icon="@drawable/ic_revolt_about"
        android:summary="@string/about_revolt_summary" />

    <header android:title="@string/user_interface" />

    <header
        android:id="@+id/user_interface"
        android:fragment="com.revolt.control.fragments.UserInterface"
        android:title="@string/general_ui"
        android:icon="@drawable/ic_revolt_general_ui"
        android:summary="@string/header_summary_general_ui" />

    <header
        android:id="@+id/halo_header"
        android:fragment="com.revolt.control.fragments.Halo"
        android:title="@string/halo_header"
        android:icon="@drawable/ic_revolt_halo"
        android:summary="@string/header_summary_halo" />

    <header
        android:id="@+id/lockscreen"
        android:fragment="com.revolt.control.fragments.Lockscreens"
        android:title="@string/lockscreen_options"
        android:icon="@drawable/ic_revolt_lockscreens"
        android:summary="@string/header_summary_lockscreens" />

    <header
        android:id="@+id/power_menu"
        android:fragment="com.revolt.control.fragments.PowerMenu"
        android:title="@string/power_menu"
        android:icon="@drawable/ic_revolt_power_menu"
        android:summary="@string/header_summary_power_menu" />

    <header
        android:id="@+id/active_display"
        android:fragment="com.revolt.control.fragments.ActiveDisplaySettings"
        android:title="@string/ad_settings_title"
        android:icon="@drawable/ic_revolt_active_display"
        android:summary="@string/header_summary_active_display" />

    <header
        android:id="@+id/nav_bar"
        android:fragment="com.revolt.control.fragments.Navbar"
        android:title="@string/nav_bar"
        android:icon="@drawable/ic_revolt_navigation_bar"
        android:summary="@string/header_summary_navigation_bar" />

    <header
        android:id="@+id/nav_ring"
        android:fragment="com.revolt.control.fragments.NavRingTargets"
        android:icon="@drawable/ic_revolt_navigation_ring"
        android:title="@string/interface_navring_settings_title"
        android:summary="@string/interface_navring_settings_summary" />

    <header
        android:id="@+id/ribbon_targets"
        android:fragment="com.revolt.control.fragments.RibbonTargets"
        android:icon="@drawable/ic_revolt_ribbon"
        android:title="@string/ribbon_settings_title"
        android:summary="@string/ribbon_settings_summary" />

    <header
        android:id="@+id/statusbar"
        android:title="@string/header_statusbar" />

    <header
        android:id="@+id/pie_header"
        android:fragment="com.revolt.control.fragments.Pie"
        android:title="@string/pie_controls_title"
        android:icon="@drawable/ic_revolt_pie"
        android:summary="@string/header_summary_pie" />

    <header
        android:id="@+id/statusbar_toggles"
        android:title="@string/toggles_layout"
        android:fragment="com.revolt.control.fragments.StatusBarToggles"
        android:icon="@drawable/ic_revolt_quick_settings"
        android:summary="@string/header_summary_toggles" />

    <header
        android:id="@+id/statusbar_battery"
        android:title="@string/battery"
        android:fragment="com.revolt.control.fragments.StatusBarBattery"
        android:icon="@drawable/ic_revolt_battery"
        android:summary="@string/header_summary_battery" />

    <header
        android:id="@+id/statusbar_clock"
        android:fragment="com.revolt.control.fragments.StatusBarClock"
        android:summary="@string/header_summary_clock"
        android:icon="@drawable/ic_revolt_clock"
        android:title="@string/clock" />

    <header
        android:id="@+id/statusbar_signal"
        android:title="@string/signal"
        android:fragment="com.revolt.control.fragments.StatusBarSignal"
        android:icon="@drawable/ic_revolt_signal"
        android:summary="@string/header_summary_signal" />

    <header
        android:id="@+id/notifications"
        android:title="@string/header_notifications" />

    <header
        android:id="@+id/notification_shortcuts"
        android:title="@string/title_notification_shortcuts"
        android:fragment="com.revolt.control.fragments.NotificationShortcuts"
        android:icon="@drawable/ic_revolt_notification_shortcuts"
        android:summary="@string/header_summary_notification_shortcuts" />

    <header
        android:id="@+id/power_widget"
        android:title="@string/title_power_widget"
        android:fragment="com.revolt.control.fragments.PowerWidget"
        android:icon="@drawable/ic_revolt_power_widget"
        android:summary="@string/header_summary_power_widget" />

    <header
        android:id="@+id/system"
        android:title="@string/header_system" />

    <header
        android:id="@+id/animations"
        android:title="@string/title_animation_controls"
        android:summary="@string/header_summary_vibrations"
        android:icon="@drawable/ic_revolt_animation"
        android:fragment="com.revolt.control.fragments.AnimationControls" />

    <header
        android:id="@+id/led"
        android:fragment="com.revolt.control.fragments.LEDControl"
        android:title="@string/led_options"
        android:icon="@drawable/ic_revolt_led"
        android:summary="@string/header_summary_led" />

    <header
        android:id="@+id/spen"
        android:fragment="com.revolt.control.fragments.SPenGestures"
        android:title="@string/spen_options"
        android:icon="@drawable/ic_revolt_spen"
        android:summary="@string/header_summary_spen" />

    <header
        android:id="@+id/sound"
        android:fragment="com.revolt.control.fragments.Sound"
        android:title="@string/sound"
        android:icon="@drawable/ic_revolt_sound"
        android:summary="@string/header_summary_sound" />

    <header
        android:id="@+id/softkey"
        android:fragment="com.revolt.control.fragments.SoftKeyOptions"
        android:title="@string/softkey_options"
        android:icon="@drawable/ic_revolt_softkey"
        android:summary="@string/header_summary_softkey" />

    <header
        android:id="@+id/vibrations"
        android:title="@string/vibrations"
        android:summary="@string/header_summary_vibrations"
        android:icon="@drawable/ic_revolt_vibrations"
        android:fragment="com.revolt.control.fragments.Vibrations" />

    <header
        android:id="@+id/screen_state_service"
        android:fragment="com.revolt.control.fragments.ScreenStateToggles"
        android:icon="@drawable/ic_revolt_screen_state"
        android:title="@string/screen_state_toggles_title" />

</preference-headers>
