<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/signal_style_entries"
        android:entryValues="@array/signal_style_values"
        android:key="signal_style"
        android:title="@string/signal_style" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="signal_color"
        android:title="@string/signal_color_title"
        android:defaultValue="@android:color/holo_blue_light" />

    <ListPreference
        android:entries="@array/wifi_signal_style_entries"
        android:entryValues="@array/wifi_signal_style_values"
        android:key="wifi_signal_style"
        android:title="@string/wifi_signal_style" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="wifi_signal_color"
        android:title="@string/wifi_signal_color_title"
        android:defaultValue="@android:color/holo_blue_light" />

    <CheckBoxPreference
        android:key="alt_signal"
        android:title="@string/alt_signal_title"
        android:summary="@string/alt_signal_summary" />

    <CheckBoxPreference
        android:key="hide_signal"
        android:title="@string/hide_signal_title"
        android:summary="@string/hide_signal_summary" />

    <CheckBoxPreference
      android:key="status_bar_traffic"
      android:title="@string/show_network_speed"
      android:summary="@string/show_network_speed_summary"
      android:defaultValue="false" />

    <CheckBoxPreference 
        android:key="sms_breath"
        android:title="@string/sms_breath"
        android:summary="@string/sms_breath_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="missed_call_breath"
        android:title="@string/missed_call_breath"
        android:summary="@string/missed_call_breath_summary"
        android:defaultValue="false" />

</PreferenceScreen>
